ACS-1630 : Storage classes - REST api - GET /nodes/{nodeId} (#517)
ACS-1630 : Storage classes - REST api - GET /nodes/{nodeId}
   - updated endpoint to reflect storage classes changes